--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #c0c0c0;
     --botao-azul: #167BF7;
-    --botao--azul-efeito: #59a2fc;
+    --botao--azul-efeito: #414dee;
     --cor-de-fundo: #00030C;
 
     --fonte-principal: "Inter", sans-serif;
